--- a/home.html
+++ b/home.html
@@ -14,14 +14,19 @@
     body {
       font-family: 'Courier New', monospace;
       background: url('background.png') center/cover no-repeat;
+      background-attachment: fixed;
+      background-position: center;
+      background-size: cover;
       color: white;
       height: 100vh;
       overflow: hidden;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      transition: background-color 0.3s ease;
     }
 
+    /* Overlay avec effet d'animation */
     #overlay {
       position: absolute;
       top: 0; left: 0;
@@ -37,6 +42,8 @@
       transition: all 1s ease;
       cursor: pointer;
       text-align: center;
+      transform: scale(1.05);
+      will-change: transform;
     }
 
     #overlay h1 {
@@ -45,6 +52,19 @@
       padding: 20px;
       border: 2px solid #0f0;
       border-radius: 10px;
+      transform: scale(1);
+      animation: fadeIn 2s ease-out;
+    }
+
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+        transform: scale(0.5);
+      }
+      100% {
+        opacity: 1;
+        transform: scale(1);
+      }
     }
 
     .card {
@@ -114,13 +134,15 @@
     }
 
     .lyric-line {
-      opacity: 0.2;
-      transition: opacity 0.3s ease;
+      opacity: 0;
+      transform: translateY(20px); /* Décale légèrement les paroles vers le bas au départ */
+      transition: opacity 0.5s ease, transform 0.5s ease;
       padding: 5px 0;
     }
 
     .lyric-line.active {
       opacity: 1;
+      transform: translateY(0); /* Remet les paroles à leur position d'origine */
       color: #0f0;
     }
 
@@ -130,10 +152,35 @@
       text-align: center;
     }
 
+    audio {
+      width: 80%;
+    }
+
+    /* Style pour le mode clair */
+    body.light-mode {
+      background-color: #fff;
+      color: #000;
+    }
+
+    body.light-mode .card {
+      background: rgba(255, 255, 255, 0.8);
+    }
+
+    #themeToggle {
+      margin-top: 20px;
+      padding: 10px 20px;
+      background: transparent;
+      color: #0f0;
+      border: 1px solid #0f0;
+      cursor: pointer;
+      font-family: inherit;
+    }
+
   </style>
 </head>
 <body>
 
+<!-- Overlay d'introduction avec animation -->
 <div id="overlay" onclick="enterSite()">
   <h1>Cliquer pour entrer dans l’abîme</h1>
 </div>
@@ -153,77 +200,88 @@
 </div>
 
 <footer>
-  <!-- La balise <audio> a été complètement supprimée -->
+  <audio id="bgAudio" controls>
+    <source src="audio.mp3" type="audio/mpeg" />
+    Ton navigateur ne supporte pas la lecture audio.
+  </audio>
+
+  <!-- Bouton pour changer de thème -->
+  <button id="themeToggle" onclick="toggleTheme()">Changer de thème</button>
 </footer>
 
 <script>
-const lyrics = [
-  { time: 0, text: "J'pense à toi, j'pense à nous deux" },
-  { time: 5, text: "Mes sentiments en silencieux, mon cœur blessé fait ses adieux" },
-  { time: 10, text: "On passe du coup de foudre au coup de feu" },
-  { time: 14, text: "7 mois pour tomber amoureux, 2 jours pour s'laisser tous les deux" },
-  { time: 18, text: "Au final on est tous pareil" },
-  { time: 21, text: "On s'fait juste tourner la pareille" },
-  { time: 24, text: "T'es l'cauchemar de mon sommeil" },
-  { time: 27, text: "T'es l'nuage de mon soleil" },
-  { time: 30, text: "J'suis très loin mais j'te surveille" },
-  { time: 33, text: "Dans l'mal j'réfléchis j'bois une bouteille" },
-  { time: 36, text: "Et je sais que tu me baratines" },
-  { time: 39, text: "On s'adore mais on se chagrine" },
-  { time: 42, text: "Tes ennemis je les élimines" },
-  { time: 45, text: "Mon sang noir finit sur la mine" },
-  { time: 48, text: "Tu m'appelles mais moi je décline" },
-  { time: 51, text: "Dans ma tête c'est une citadine" },
-  { time: 54, text: "Mais jour par jour on s'éloigne" },
-  { time: 57, text: "Et ça, crois-moi, ça fait mal" },
-  { time: 60, text: "En fait t'es comme une fleur ouais tu m'as fané" },
-  { time: 64, text: "T'étais la plus belle à mes yeux mais tu m'as mis sur le côté" },
-  { time: 69, text: "N'oublie pas que si je t'ai quittée c'est parce que t'as tout fauté" },
-  { time: 74, text: "Ouais t'as tout gâché" },
-  { time: 77, text: "Doigt sur la gâchette, une balle dans la tête" },
-  { time: 81, text: "Et tu hantes mes rêves en créant des cauchemars" },
-  { time: 85, text: "J'attends que tu répondes à mes messages jusqu'à très tard" },
-  { time: 89, text: "J'attends que tu répondes à mes messages jusqu'à très tard, ouais ouais ouais" },
-  { time: 94, text: "L'argent ça ne fais pas le bonheur mais j'suis pas heureux" },
-  { time: 97, text: "Et si j'ai tout donné pour toi c'était par erreur" },
-  { time: 100, text: "Tu m'fais péter des plombs alors j'vais prendre l'air et j'bois pendant des heures eh" },
-  { time: 103, text: "J'traverse le désert sans eau et sans ton cœur" }
-];
+  // Paroles et temps pour le karaoké
+  const lyrics = [
+    { time: 0, text: "J'pense à toi, j'pense à nous deux" },
+    { time: 5, text: "Mes sentiments en silencieux, mon cœur blessé fait ses adieux" },
+    { time: 10, text: "On passe du coup de foudre au coup de feu" },
+    { time: 14, text: "7 mois pour tomber amoureux, 2 jours pour s'laisser tous les deux" },
+    { time: 18, text: "Au final on est tous pareil" },
+    { time: 21, text: "On s'fait juste tourner la pareille" },
+    { time: 24, text: "T'es l'cauchemar de mon sommeil" },
+    { time: 27, text: "T'es l'nuage de mon soleil" },
+    { time: 30, text: "J'suis très loin mais j'te surveille" },
+    { time: 33, text: "Dans l'mal j'réfléchis j'bois une bouteille" },
+    { time: 36, text: "Et je sais que tu me baratines" },
+    { time: 39, text: "On s'adore mais on se chagrine" },
+    { time: 42, text: "Tes ennemis je les élimines" },
+    { time: 45, text: "Mon sang noir finit sur la mine" },
+    { time: 48, text: "Tu m'appelles mais moi je décline" },
+    { time: 51, text: "Dans ma tête c'est une citadine" },
+    { time: 54, text: "Mais jour par jour on s'éloigne" },
+    { time: 57, text: "Et ça, crois-moi, ça fait mal" },
+    { time: 60, text: "En fait t'es comme une fleur ouais tu m'as fané" },
+    { time: 64, text: "T'étais la plus belle à mes yeux mais tu m'as mis sur le côté" },
+    { time: 69, text: "N'oublie pas que si je t'ai quittée c'est parce que t'as tout fauté" },
+    { time: 74, text: "Ouais t'as tout gâché" },
+    { time: 77, text: "Doigt sur la gâchette, une balle dans la tête" },
+    { time: 81, text: "Et tu hantes mes rêves en créant des cauchemars" },
+    { time: 85, text: "J'attends que tu répondes à mes messages jusqu'à très tard" },
+    { time: 89, text: "J'attends que tu répondes à mes messages jusqu'à très tard, ouais ouais ouais" },
+    { time: 94, text: "L'argent ça ne fais pas le bonheur mais j'suis pas heureux" },
+    { time: 97, text: "Et si j'ai tout donné pour toi c'était par erreur" },
+    { time: 100, text: "Tu m'fais péter des plombs alors j'vais prendre l'air et j'bois pendant des heures eh" },
+    { time: 103, text: "J'traverse le désert sans eau et sans ton cœur" }
+  ];
 
-function enterSite() {
-  const overlay = document.getElementById("overlay");
-  overlay.style.backdropFilter = "blur(0px)";
-  overlay.style.webkitBackdropFilter = "blur(0px)";
-  overlay.style.backgroundColor = "rgba(0, 0, 0, 0)";
-  overlay.style.opacity = "0";
-  overlay.style.pointerEvents = "none";
+  function enterSite() {
+    const overlay = document.getElementById("overlay");
+    overlay.style.backdropFilter = "blur(0px)";
+    overlay.style.webkitBackdropFilter = "blur(0px)";
+    overlay.style.backgroundColor = "rgba(0, 0, 0, 0)";
+    overlay.style.opacity = "0";
+    overlay.style.pointerEvents = "none";
 
-  document.getElementById("mainCard").style.display = "block";
-  document.getElementById("contentWrapper").style.display = "flex";
+    document.getElementById("mainCard").style.display = "block";
+    document.getElementById("contentWrapper").style.display = "flex";
 
-  const audio = new Audio('audio.mp3'); // Création d'un objet Audio sans l'affichage
-  const lyricsBox = document.getElementById("lyricsBox");
+    const audio = document.getElementById("bgAudio");
+    const lyricsBox = document.getElementById("lyricsBox");
 
-  lyricsBox.innerHTML = lyrics.map((line, i) => `<div class="lyric-line" id="line-${i}">${line.text}</div>`).join('');
+    lyricsBox.innerHTML = lyrics.map((line, i) => `<div class="lyric-line" id="line-${i}">${line.text}</div>`).join('');
 
-  audio.play().catch(err => console.log("Autoplay bloqué :", err));
+    audio.play().catch(err => console.log("Autoplay bloqué :", err));
 
-  // Retarder l'affichage des paroles de 8 secondes
-  setTimeout(() => {
-    audio.ontimeupdate = () => {
-      const currentTime = audio.currentTime;
-      lyrics.forEach((line, i) => {
-        const element = document.getElementById(`line-${i}`);
-        if (currentTime >= line.time + 8) { // Ajoutez un délai de 8 secondes ici
-          element.classList.add("active");
-          element.scrollIntoView({ behavior: 'smooth', block: 'center' });
-        } else {
-          element.classList.remove("active");
-        }
-      });
-    };
-  }, 8000); // Attendre 8 secondes avant de commencer le karaoké
-}
+    setTimeout(() => {
+      audio.ontimeupdate = () => {
+        const currentTime = audio.currentTime;
+        lyrics.forEach((line, i) => {
+          const element = document.getElementById(`line-${i}`);
+          if (currentTime >= line.time + 8) {
+            element.classList.add("active");
+            element.scrollIntoView({ behavior: 'smooth', block: 'center' });
+          } else {
+            element.classList.remove("active");
+          }
+        });
+      };
+    }, 8000);
+  }
+
+  // Fonction pour changer le thème
+  function toggleTheme() {
+    document.body.classList.toggle("light-mode");
+  }
 </script>
 
 </body>
