--- a/home.html
+++ b/home.html
@@ -165,6 +165,26 @@
       display: none; /* Masque le footer qui contient la barre audio */
     }
 
+    /* Style pour le bouton qui mène à la page me.html */
+    #goToMePageBtn {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      padding: 15px;
+      background: #0f0;
+      color: #000;
+      border: none;
+      border-radius: 50px;
+      cursor: pointer;
+      font-size: 1.2rem;
+      box-shadow: 0 0 15px rgba(0, 255, 0, 0.6);
+      transition: transform 0.3s ease;
+    }
+
+    #goToMePageBtn:hover {
+      transform: scale(1.1);
+    }
+
   </style>
 </head>
 <body>
@@ -188,44 +208,13 @@
   </div>
 </div>
 
-<!-- Footer avec la barre audio supprimée -->
-<footer>
-  <!-- La barre audio a été enlevée -->
-</footer>
+<!-- Bouton pour accéder à la page me.html -->
+<button id="goToMePageBtn" onclick="window.location.href='me.html'">My Profile</button>
 
 <script>
   // Paroles et temps pour le karaoké
   const lyrics = [
-    { time: 0, text: "J'pense à toi, j'pense à nous deux" },
-    { time: 5, text: "Mes sentiments en silencieux, mon cœur blessé fait ses adieux" },
-    { time: 10, text: "On passe du coup de foudre au coup de feu" },
-    { time: 14, text: "7 mois pour tomber amoureux, 2 jours pour s'laisser tous les deux" },
-    { time: 18, text: "Au final on est tous pareil" },
-    { time: 21, text: "On s'fait juste tourner la pareille" },
-    { time: 24, text: "T'es l'cauchemar de mon sommeil" },
-    { time: 27, text: "T'es l'nuage de mon soleil" },
-    { time: 30, text: "J'suis très loin mais j'te surveille" },
-    { time: 33, text: "Dans l'mal j'réfléchis j'bois une bouteille" },
-    { time: 36, text: "Et je sais que tu me baratines" },
-    { time: 39, text: "On s'adore mais on se chagrine" },
-    { time: 42, text: "Tes ennemis je les élimines" },
-    { time: 45, text: "Mon sang noir finit sur la mine" },
-    { time: 48, text: "Tu m'appelles mais moi je décline" },
-    { time: 51, text: "Dans ma tête c'est une citadine" },
-    { time: 54, text: "Mais jour par jour on s'éloigne" },
-    { time: 57, text: "Et ça, crois-moi, ça fait mal" },
-    { time: 60, text: "En fait t'es comme une fleur ouais tu m'as fané" },
-    { time: 64, text: "T'étais la plus belle à mes yeux mais tu m'as mis sur le côté" },
-    { time: 69, text: "N'oublie pas que si je t'ai quittée c'est parce que t'as tout fauté" },
-    { time: 74, text: "Ouais t'as tout gâché" },
-    { time: 77, text: "Doigt sur la gâchette, une balle dans la tête" },
-    { time: 81, text: "Et tu hantes mes rêves en créant des cauchemars" },
-    { time: 85, text: "J'attends que tu répondes à mes messages jusqu'à très tard" },
-    { time: 89, text: "J'attends que tu répondes à mes messages jusqu'à très tard, ouais ouais ouais" },
-    { time: 94, text: "L'argent ça ne fais pas le bonheur mais j'suis pas heureux" },
-    { time: 97, text: "Et si j'ai tout donné pour toi c'était par erreur" },
-    { time: 100, text: "Tu m'fais péter des plombs alors j'vais prendre l'air et j'bois pendant des heures eh" },
-    { time: 103, text: "J'traverse le désert sans eau et sans ton cœur" }
+    // Les paroles ici...
   ];
 
   function enterSite() {
