--- a/me.html
+++ b/me.html
@@ -1,73 +1,130 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Profile - OverClem</title>
+  <title>Mes Projets</title>
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
       font-family: 'Courier New', monospace;
-      background-color: #1a1a1a;
+      background-color: #1e1e1e;
       color: white;
       height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
+      overflow-x: hidden;
+    }
+
+    header {
       padding: 20px;
-      transition: background-color 0.3s ease;
+      background: #0f0;
+      color: black;
+      font-size: 2rem;
+      text-align: left;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
     }
 
-    .card {
-      background: rgba(0, 0, 0, 0.75);
-      padding: 30px;
+    .projects-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      padding: 40px;
+    }
+
+    .project-card {
+      width: 300px;
+      margin: 20px;
+      background: rgba(0, 0, 0, 0.7);
       border-radius: 10px;
+      padding: 20px;
+      box-shadow: 0 0 15px #0f0;
       text-align: center;
-      box-shadow: 0 0 20px #0f0;
+      transition: transform 0.3s ease-in-out;
     }
 
-    h2 {
+    .project-card:hover {
+      transform: translateY(-10px);
+    }
+
+    .project-card img {
+      width: 100%;
+      border-radius: 10px;
+    }
+
+    .project-card h3 {
+      margin: 10px 0;
       color: #0f0;
-      font-size: 2.5rem;
     }
 
-    .pfp {
-      border: 3px solid #0f0;
-      border-radius: 50%;
-      width: 100px;
-      height: 100px;
-    }
-
-    .tagline {
-      margin-top: 10px;
-      font-style: italic;
+    .project-card p {
+      font-size: 1rem;
       color: #aaa;
     }
 
-    .back-btn {
-      margin-top: 20px;
-      padding: 10px 20px;
-      background: #0f0;
-      color: black;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 1.2rem;
+    .secret-project {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 40px;
+      background: rgba(0, 0, 0, 0.7);
+      border-radius: 10px;
+      box-shadow: 0 0 15px #0f0;
     }
 
-    .back-btn:hover {
-      transform: scale(1.05);
+    .secret-project h3 {
+      font-size: 1.5rem;
+      color: #0f0;
+      text-align: center;
+    }
+
+    .banner {
+      width: 100%;
+      border-radius: 10px;
     }
   </style>
 </head>
 <body>
 
-  <div class="card">
-    <img class="pfp" src="pfp.png" alt="pfp">
-    <h2>OverClem</h2>
-    <p class="tagline">Your personal abyss</p>
-    <p>Welcome to my profile page</p>
-    <button class="back-btn" onclick="window.location.href='home.html'">Back to Home</button>
+  <!-- En-tête avec le titre -->
+  <header>
+    Mes projets
+  </header>
+
+  <!-- Conteneur pour les projets -->
+  <div class="projects-container">
+    <!-- Projet Aragonite -->
+    <div class="project-card">
+      <img src="aragonite-banner.jpg" alt="Aragonite">
+      <h3>Aragonite</h3>
+      <p>Mon serveur Minecraft PvP faction moddé. Affrontez d'autres joueurs dans un monde dynamique rempli de factions et de combats stratégiques.</p>
+    </div>
+
+    <!-- Projet Goliath -->
+    <div class="project-card">
+      <img src="goliath-logo.png" alt="Goliath">
+      <h3>Goliath</h3>
+      <p>Mon bot Discord multifonction. Utilisez-le pour gérer votre serveur, créer des commandes personnalisées et bien plus encore.</p>
+    </div>
+
+    <!-- Projet Arkania -->
+    <div class="project-card">
+      <img src="arkania-logo.png" alt="Arkania">
+      <h3>Arkania</h3>
+      <p>Un serveur Discord de rencontre et RP magique. Rejoignez un monde magique où vous pouvez rencontrer de nouveaux amis et plonger dans des aventures fantastiques.</p>
+    </div>
+
+    <!-- Projet secret -->
+    <div class="secret-project">
+      <div>
+        <h3>Projet secret ?</h3>
+        <img src="secret-banner.jpg" alt="Projet secret" class="banner">
+      </div>
+    </div>
+
   </div>
 
 </body>
