--- a/me.html
+++ b/me.html
@@ -98,7 +98,7 @@
   <div class="projects-container">
     <!-- Projet Aragonite -->
     <div class="project-card">
-      <img src="aragonite-banner.jpg" alt="Aragonite">
+      <img src="aragonite-banner.png" alt="Aragonite">
       <h3>Aragonite</h3>
       <p>Mon serveur Minecraft PvP faction moddé. Affrontez d'autres joueurs dans un monde dynamique rempli de factions et de combats stratégiques.</p>
     </div>
@@ -121,7 +121,7 @@
     <div class="secret-project">
       <div>
         <h3>Projet secret ?</h3>
-        <img src="secret-banner.jpg" alt="Projet secret" class="banner">
+        <img src="secret-banner.png" alt="Projet secret" class="banner">
       </div>
     </div>
 
