--- a/me.html
+++ b/me.html
@@ -62,8 +62,6 @@
     }
 
     .project-card img {
-      width: 80%;
-      border-radius: 10px;
       margin-bottom: 15px;
       transition: transform 0.4s ease;
     }
@@ -78,6 +76,7 @@
       width: 100%;
       height: 160px;
       object-fit: cover;
+      border-radius: 10px;
     }
 
     .project-card h3 {
@@ -102,6 +101,7 @@
       border-radius: 15px;
       box-shadow: 0 4px 15px rgba(0, 255, 0, 0.6);
       text-align: center;
+      width: 100%;
     }
 
     .secret-project h3 {
@@ -113,6 +113,8 @@
 
     .secret-project img {
       width: 100%;
+      height: 160px;
+      object-fit: cover;
       border-radius: 10px;
       transition: transform 0.3s ease;
     }
