--- a/me.html
+++ b/me.html
@@ -152,7 +152,6 @@
   <div class="projects-container">
     <!-- Projet Aragonite -->
     <div class="project-card">
-      <img src="aragonite-logo.png" alt="Aragonite" class="logo">
       <h3>Aragonite</h3>
       <p>Aragonite est un serveur Minecraft PvP de type faction moddé, où les joueurs s'affrontent dans des batailles stratégiques pour conquérir le monde. Rejoignez une faction, formez des alliances et préparez-vous à dominer dans un univers riche en fonctionnalités et en défis.</p>
       <img src="aragonite-banner.png" alt="Bannière Aragonite" class="banner">
@@ -160,7 +159,6 @@
 
     <!-- Projet Goliath -->
     <div class="project-card">
-      <img src="goliath-logo.png" alt="Goliath" class="logo">
       <h3>Goliath</h3>
       <p>Goliath est un bot Discord multifonction conçu pour faciliter la gestion de votre serveur. Que ce soit pour automatiser des tâches, gérer des rôles ou intégrer des jeux, ce bot est l'outil tout-en-un pour optimiser l'expérience utilisateur sur votre serveur.</p>
       <img src="goliath-banner.png" alt="Bannière Goliath" class="banner">
@@ -170,14 +168,13 @@
   <div class="projects-container">
     <!-- Projet Arkania -->
     <div class="project-card">
-      <img src="arkania-logo.png" alt="Arkania" class="logo">
       <h3>Arkania</h3>
       <p>Arkania est un serveur Discord axé sur les rencontres et le RP dans un univers magique. Entrez dans un monde où chaque choix vous plonge dans des aventures fantastiques et où vous pouvez rencontrer des joueurs partageant les mêmes passions pour l'aventure et le fantastique.</p>
       <img src="arkania-banner.png" alt="Bannière Arkania" class="banner">
     </div>
 
     <!-- Projet secret -->
-    <div class="secret-project">
+    <div class="project-card">
       <div>
         <h3>Projet secret ?</h3>
         <p>Un projet mystérieux est en préparation... Plus d'infos bientôt !</p>
