--- a/me.html
+++ b/me.html
@@ -161,7 +161,7 @@
     <div class="project-card">
       <h3>Goliath</h3>
       <p>Goliath est un bot Discord multifonction conçu pour faciliter la gestion de votre serveur. Que ce soit pour automatiser des tâches, gérer des rôles ou intégrer des jeux, ce bot est l'outil tout-en-un pour optimiser l'expérience utilisateur sur votre serveur.</p>
-      <img src="goliath-banner.png" alt="Bannière Goliath" class="banner">
+      <img src="goliath-logo.png" alt="Bannière Goliath" class="banner">
     </div>
   </div>
 
@@ -170,7 +170,7 @@
     <div class="project-card">
       <h3>Arkania</h3>
       <p>Arkania est un serveur Discord axé sur les rencontres et le RP dans un univers magique. Entrez dans un monde où chaque choix vous plonge dans des aventures fantastiques et où vous pouvez rencontrer des joueurs partageant les mêmes passions pour l'aventure et le fantastique.</p>
-      <img src="arkania-banner.png" alt="Bannière Arkania" class="banner">
+      <img src="arkania-logo.png" alt="Bannière Arkania" class="banner">
     </div>
 
     <!-- Projet secret -->
